argocd-apps/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer   # or letsencrypt-prod if you set that up
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80   # IMPORTANT: forward to HTTP, not 443
  tls:
  - hosts:
    - argocd.local
    secretName: argocd-tls   # cert-manager will create/manage this
